# Blogs-API

./: .coveragerc  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini
app/api/: auth.py  posts.py
app/cache/: redis.py
app/core/: config.py  dependencies.py  security.py
app/models/: post.py  user.py
app/schemas/: post.py  user.py
nginx/: nginx.conf
scripts/: test.sh
tests/: conftest.py  test_auth.py  test_cache.py  test_database.py  test_dependencies.py  test_posts.py
